--- a/popup/popup.html
+++ b/popup/popup.html
@@ -12,6 +12,15 @@
         <input type="checkbox" id="blockToggle">
     </div>
 
+    <!-- Seção para gerenciar lista personalizada -->
+    <div class="section">
+        <h2>Gerenciar Lista Personalizada</h2>
+        <input type="text" id="customDomainInput" placeholder="Digite o dominio">
+        <button id="addDomainButton">Adicionar</button>
+        <button id="removeDomainButton">Remover</button>
+        <ul id="customDomainsList"></ul>
+    </div>
+
     <!-- Seção para exibir rastreadores bloqueados -->
     <div class="section">
         <div id="status"></div>
