Leves modificações no html

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -27,7 +27,7 @@
 
     <!-- Seção para rastreadores padrão -->
     <div class="section">
-        <h2>Rastreadores Bloqueados por Padrao</h2>
+        <h2>Rastreadores Bloqueados</h2>
         <ul id="defaultTrackersList"></ul>
     </div>
 
